--- a/store/src/Components/GameCover/GameCover.css
+++ b/store/src/Components/GameCover/GameCover.css
@@ -1,5 +1,6 @@
 .game__cover {
-    height: 170px;
+    /* height: 170px; */
+    height: 250px;
     width: 100%;
     background-size: cover;
     background-position: center;
