--- a/store/src/Components/Header/Header.css
+++ b/store/src/Components/Header/Header.css
@@ -12,7 +12,7 @@
 }
 
 .header__store-title {
-    color: red;
+    color: green;
     text-decoration: none;
     font-size: 24px;
     font-weight: 600;
