--- a/store/src/Components/Button/Button.css
+++ b/store/src/Components/Button/Button.css
@@ -3,7 +3,7 @@
     color: white;
     border: none;
     cursor: pointer;
-    padding: 5px;
+    padding: 15px;
 
 }
 
@@ -17,9 +17,8 @@
 
 .btn--small {
     background-color: green;
-    width: 40px;
 }
 
 .btn--medium {
-    background-color: grey;
+    background-color: rgb(119, 121, 118);
 }
