--- a/store/src/Components/CartBlock/CartBlock.css
+++ b/store/src/Components/CartBlock/CartBlock.css
@@ -5,7 +5,7 @@
 }
 
 .cart__block-icon {
-    color: green;
+    color: white;
     cursor: pointer;
     position: relative;
 }
@@ -14,5 +14,5 @@
     margin-left: 15px;
     font-size: 18px;
     font-weight: 600;
-    color: green;
+    color: white;
 }
