redux toolkit, cartItems, fix function  delete items from cart

--- a/store/src/Components/GameItem/GameItem.css
+++ b/store/src/Components/GameItem/GameItem.css
@@ -1,10 +1,10 @@
 .game__item {
     text-decoration: none;
     width: 340px;
-    height: 300px;
+    height: 340px;
     /* background-color: grey; */
     border-radius: 15px;
-    border-bottom: 2px solid grey;
+    border-bottom: 4px solid white;
     color: #fff;
     cursor: pointer;
     /* margin: 10px; */
