--- a/store/src/Components/CartItem/CartItem.css
+++ b/store/src/Components/CartItem/CartItem.css
@@ -2,10 +2,28 @@
     padding: 10px;
     display: flex;
     justify-content: space-between;
+    text-align: center;
+    align-items: center;
 }
 
 .cart__title {
     font-size: 24px;
     font-weight: 600;
 
+}
+
+.cart__price {
+    padding: 0 15px;
+}
+
+.close {
+    opacity: 0.5s;
+    cursor: pointer;
+    align-items: center;
+    text-align: center;
+}
+
+.close svg {
+    width: 16px;
+    height: 16px;
 }
