--- a/store/src/Components/Concole/Console.css
+++ b/store/src/Components/Concole/Console.css
@@ -4,6 +4,12 @@
     width: 400px;
 }
 
+.console__price {
+    font-size: 20px;
+    font-weight: 600;
+    margin: 20px 0;
+}
+
 .console__buy {
     width: 150px;
     height: 40px;
