Component Cart fror Consoles  Redux

--- a/store/src/Components/CartBlock/CartBlock.css
+++ b/store/src/Components/CartBlock/CartBlock.css
@@ -16,3 +16,10 @@
     font-weight: 600;
     color: white;
 }
+
+.cart__block-console {
+    color: white;
+    cursor: pointer;
+    position: relative;
+    margin-left: 10px;
+}
