media for header

--- a/store/src/Components/CartConsole/CartConsole.css
+++ b/store/src/Components/CartConsole/CartConsole.css
@@ -27,3 +27,10 @@
     width: 16px;
     height: 16px;
 }
+
+@media screen and (max-width: 450px) {
+    .cartconsole__title {
+        font-size: 18px;
+    }
+
+}
