--- a/store/src/Components/ConsoleCover/ConsoleCover.css
+++ b/store/src/Components/ConsoleCover/ConsoleCover.css
@@ -1,4 +1,9 @@
 .console__cover {
+    /* max-width: 340px; */
+    max-width: 286px;
     width: 400px;
-    height: 400px;
+    height: 306px;
+    background-size: cover;
+    background-position: center;
+    z-index: 333;
 }
