--- a/store/src/Components/GamePass/GamePass.css
+++ b/store/src/Components/GamePass/GamePass.css
@@ -44,7 +44,7 @@
 
 .game__pass-add {
     display: block;
-    margin: 20px 0;
+    margin: 20px 10px;
     text-align: center;
 }
 
@@ -56,9 +56,30 @@
 .game__pass-games {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .game__pass-game img {
     width: 383px;
     height: 580px;
+}
+
+@media screen and (max-width: 600px) {
+
+    .game__pas-description span,
+    .game__pas-description p {
+        font-size: 18px;
+    }
+
+    .game__pass-title span {
+        font-size: 26px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .game__pass-game img {
+        width: 277px;
+        height: 452px;
+    }
+
 }
