--- a/store/src/Components/Play/Play.css
+++ b/store/src/Components/Play/Play.css
@@ -9,6 +9,7 @@
     font-size: 18px;
     font-weight: 600;
     margin: 10px 0;
+    padding: 0 10px;
 }
 
 .btn-play {
@@ -19,4 +20,11 @@
     border-radius: 10px;
     border: none;
     cursor: pointer;
+}
+
+@media screen and (max-width: 480px) {
+    .play__now-title {
+        font-size: 18px;
+    }
+
 }
