--- a/store/src/Components/SingIn/SingIn.css
+++ b/store/src/Components/SingIn/SingIn.css
@@ -1,5 +1,11 @@
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+
 .sing__in-form {
-    width: 500px;
+    max-width: 500px;
     margin: 100px auto 0;
     background: #fff;
     /* padding: 30px; */
@@ -105,7 +111,7 @@ fieldset {
     color: #fff;
     text-transform: uppercase;
     white-space: nowrap;
-    font-size: 1.3rem;
+    font-size: 24px;
     -webkit-transition: all .2s ease;
     -moz-transition: all .2s ease;
     -ms-transition: all .2s ease;
@@ -123,11 +129,12 @@ fieldset {
     background-color: #5aec39;
 }
 
-@media only screen and (max-width: 767px) {
-    .login_wrap {
-        width: 100%;
-        margin: 0 auto;
-        background: #fff;
-        padding: 30px;
+@media screen and (max-width: 400px) {
+    form {
+        margin-bottom: 150px;
+    }
+
+    .btnForm {
+        font-size: 18px;
     }
 }
