media component Order and fix logic in Order

--- a/store/src/Components/Order/Order.css
+++ b/store/src/Components/Order/Order.css
@@ -1,22 +1,3 @@
-/* .order {
-    flex-direction: column;
-    display: flex;
-
-}
-
-.order__left {
-    justify-content: start;
-    width: 40%;
-
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.order__right {
-    justify-content: flex-end;
-    align-self: flex-end;
-} */
-
 .order__total-price {
     font-size: 24px;
     font-weight: 600;
@@ -25,4 +6,11 @@
 .total__price {
     font-size: 24px;
     font-weight: 600;
+}
+
+@media screen and (max-width: 800px) {
+    .order__total-price span {
+        font-size: 18px;
+    }
+
 }
